--- a/pom.xml
+++ b/pom.xml
@@ -154,7 +154,6 @@
 			<artifactId>mssql-jdbc</artifactId>
 			<version>9.4.1.jre8</version>
 		</dependency>
-
 		<!-- Needed for Email subscriptions -->
 		<dependency>
 			<groupId>org.simplejavamail</groupId>
@@ -290,11 +289,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-autoconfigure</artifactId>
-			<version>${spring_boot_version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-configuration-processor</artifactId>
 			<version>${spring_boot_version}</version>
 		</dependency>
 		<dependency>
@@ -528,7 +522,6 @@
 			<artifactId>sqlbuilder</artifactId>
 			<version>3.0.2</version>
 		</dependency>
-
 
 		<!-- Jackson -->
 		<dependency>
@@ -777,6 +770,23 @@
 			<artifactId>json-path</artifactId>
 			<version>2.5.0</version>
 		</dependency>
+
+		<!-- dkitec:added -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<version>${spring_boot_version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.oracle.database.jdbc</groupId>
+			<artifactId>ojdbc10</artifactId>
+			<version>19.10.0.0</version>
+		</dependency>
+		<!--<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>${spring_version}</version>
+		</dependency>-->
 	</dependencies>
 
 	<build>
