--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,11 +15,17 @@ spring:
     check-location: false
     baselineOnMigrate: true
   datasource:
-    url: 'jdbc:postgresql://localhost:5432/hapi_v6'
-    username: postgres
-    password: root
-    driverClassName: org.postgresql.Driver
-    max-active: 15
+#    url: 'jdbc:oracle:thin:@10.112.57.11:1521/FHIRPDB'
+#    username: fhiruser
+#    driver-class-name: oracle.jdbc.OracleDriver
+#    password: Fhiruser
+#    max-active: 15
+
+#    url: 'jdbc:postgresql://localhost:5432/hapi_v6'
+#    username: postgres
+#    password: root
+#    driverClassName: org.postgresql.Driver
+#    max-active: 15
 
     # database connection pool size
     hikari:
@@ -32,7 +38,8 @@ spring:
       #If using H2, then supply the value of ca.uhn.fhir.jpa.model.dialect.HapiFhirH2Dialect
       #If using postgres, then supply the value of ca.uhn.fhir.jpa.model.dialect.HapiFhirPostgres94Dialect
 
-      hibernate.dialect: ca.uhn.fhir.jpa.model.dialect.HapiFhirPostgres94Dialect
+      #hibernate.dialect: ca.uhn.fhir.jpa.model.dialect.HapiFhirPostgres94Dialect
+      hibernate.dialect: org.hibernate.dialect.Oracle12cDialect
       hibernate.hbm2ddl.auto: update
   #      hibernate.jdbc.batch_size: 20
   #      hibernate.cache.use_query_cache: false
